Add Stamp plate, TaiChi, Coy to Projects

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div>
         <div class="other-project first-item">
           <div class="project-name">Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</div>
-          <div class="project-role">User Research, Prototyping</div>
+          <div class="project-role">Prototyping, Qualitative Data Analysis</div>
 <!--          <img src="#" alt="Stamp Plate" class="project-image"/>-->
         </div>
         <!-- The Modal -->
@@ -193,26 +193,66 @@
               <span class="close">×</span>
               <p>Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</p>
             </div>
+            <figure>
+              <img src="stamp-plate/hi_fi_prototype_2.gif" class="modal-main-image"/>
+            </figure>
             <div class="modal-role">
-              User Research, Prototyping
+              Prototyping, Qualitative Data Analysis
+            </div>
+            <div class="modal-role">
+              Team: Yingyu Chen, Dennis Wang, Xin Gao, Alexis Hiniker
+            </div>
+            <div class="modal-role">
+              Affiliation: University of Washington
             </div>
             <div class="modal-body">
-              <p></p>
+              <p>This project aims to study family mealtime with preschool children and investigate how interactive technology & data play might help with family mealtime for preschoolers and parents.
+              </p>
+              <p>I co-work with the remote team in the States. Adopting the design thinking process along with previous restaurant observation and parents interview, we came up with several design ideas. We created prototypes and test them with the children to validate these ideas; also, we spread out the questionnaire with illustrative examples and description of prototypes, to gather the parents' and teachers' feedback on the prototypes.</p>
+              <figure>
+                <img src="stamp-plate/1_cat_fork.png" alt="Cat fork" class="modal-image">
+                <figcaption>
+                  The cat fork. When fork meets the plate, it causes different parts of the cat’s face to light up. The illuminating effect on the plate provides children with immediate positive feedback, encouraging them to touch the fork with their own plate rather than touch the table or pick up other children’s utensils. The prototype is built with an Arduino board and a Makey Makey.
+                </figcaption>
+              </figure>
+              <figure>
+                <img src="stamp-plate/2_stamp_plate.png" alt="Stamp Plate" class="modal-image">
+                <figcaption>
+                  Stamp Plate. As the child eats, the stamp plate keeps track of the food that has been eaten and displays silhouetted figures that resemble that food the child take off on the plate. A goldfish cracker, for example, leaves behind the shape of a small fish. We designed the plate to account for children’s sensory needs while encouraging them to keep food on the plate and reduce mess while eating. 
+                </figcaption>
+              </figure>
+              <figure>
+                <img src="stamp-plate/3_illustration.png" alt="Illustration of a talking bear" class="modal-image">
+                <figcaption>An example of prototype from the questionnaire: A talking bear (voice-based virtual agent) that strikes up a conversation when nobody talks through the mealtime.</figcaption>
+              </figure>
+              <p>Eventually, we decided to developed the Stamp Plate prototype into a hi-fidelity tech probe for the field study. I worked with another developer to create the hi-fi prototype, using weight sensor, Arduino, and Processing on the Android tablet. We've explored several approaches, e.g., computer vision, electric capacitiy based solutions; we found using weight sensor is the easiest and the most precise way as for now.</p>
+              <p>When the children take off the food on the plate, the stamp plate creates a stamp that resemble the food. It keeps track of the food that has been eaten. After the meal, these stamps become an art materials that children can create drawings with.</p>
+              <figure>
+                <img src="stamp-plate/hi_fi_prototype_1.gif" alt="Take off the food. The stamp appear on the plate." class="modal-image">
+                <figcaption>Building Hi-fidelity prototype. We enabled the recognition of "taking off the food".</figcaption>
+              </figure>
+              <p>We conducted the field studies at households in the U.S., before we transcribed the videos into text, conducted qualitative coding and data analysis.</p>
+              <p>This project is still ongoing. But there's some preliminary result that I could share. For instance, in several studies, the children picky about the food would actively eat the food they didn't like before or eat more food, just because they want to collect different kind of stamps.</p>
+              <figure>
+                <img src="stamp-plate/4_remote.png" alt="Skype" class="modal-image">
+                <figcaption>We worked remotely in three time zones to brainstorm ideas and work on things together.</figcaption>
+              </figure>
+              <h3>Project Outcome</h3>
+              <p>This project is still ongoing and we've submitted papers that are currently under review.</p>
+              <p>You can also refer to <a href="file/TAICHI_2018_paper_31.pdf" target="_blank">our TAICHI'18 paper</a> for the lo-fi testing results and how we built the hi-fi prototype of Stamp Plate.</p>
             </div>
-            <img src="#" class="modal-image" />
           </div>
         </div>
       </div>
            
+<!--
       <div>
         <div class="other-project">
           <div class="project-name">Human-centered Manufacturing</div>
           <div class="project-role">User Research, Prototyping</div>
-<!--          <img src="#" alt="Manufacturing" class="project-image"/>-->
+          <img src="#" alt="Manufacturing" class="project-image"/>
         </div>
-        <!-- The Modal -->
         <div class="modal-mask">
-          <!-- Modal content -->
           <div class="modal-popup">
             <div class="modal-header">
               <span class="close">×</span>
@@ -228,11 +268,11 @@
           </div>
         </div>
       </div>
-
+-->
       <div>
-        <div class="other-project last-item">
+        <div class="other-project">
           <div class="project-name">A haptic motion guidance sleeve for Tai Chi Learning</div>
-          <div class="project-role">User Testing, Prototyping</div>
+          <div class="project-role">Experiment Design, Quantitative Analysis, Prototyping</div>
 <!--          <img src="#" alt="Tai Chi" class="project-image"/>-->
         </div>
         <!-- The Modal -->
@@ -243,16 +283,110 @@
               <span class="close">×</span>
               <p>A haptic motion guidance sleeve for Tai Chi Learning</p>
             </div>
+            <figure>
+              <img src="taichi/main.png" class="modal-main-image"/>
+            </figure>
             <div class="modal-role">
-              User Testing, Prototyping
+              Role: Experiment Design, Quantitative Analysis, Prototyping
+            </div>
+            <div class="modal-role">
+              Team: Yenyu Chen, Neng-Hao Yu
+            </div>
+            <div class="modal-role">
+              Affiliation: National ChengChi University & Nation Taiwan University
             </div>
             <div class="modal-body">
-              <p></p>
+              <p>Online videos make it possible and popular to do exercise and fitness at home. However, for the practitioners, it's not easy to notice the subtle change of motion by merely watching training videos, so they cannot perform the movements well.
+              </p>
+              <p>In the field study in the on-site Tai chi (太極) classroom, we found that the coach would hold the practitioner's arm to correct the motion, which inspired us to 'design a virtual coach' to enhance the learning of tai chi.</p>
+              <figure>
+                <iframe src="https://www.youtube.com/embed/_Goos9Zn0jU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </figure>
+              <p>We have designed 'external artificial muscles' on a sleeve to create a pulling sensation that mimic the touch from a virtual touch and can gently guide the forearm’s pronation (internal rotation) and the forearm’s supination (external rotation). We conduct two preliminary experiments to verify the system:</p>
+              <ul>
+                <li>The first one is directional response task to measure the clarity of pulling direction. The result shows that this system can effectively guide the forearm to rotate in the correct direction with a 99.87% accuracy in average.</li>
+                <li>The second one utilizes the tactile cue. The cue consists of a 2-second directional cue and several 0.5-second angle targeting cues. The results show that users can be guided to the targeted angle by utilizing a tactile cue.</li>
+              </ul>
+              <h3>Project outcome</h3>
+              <p>Paper published in Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems (CHI '16). You can <a href="https://dl.acm.org/citation.cfm?id=2858275" target="_blank">download the paper from ACM digital library</a> or <a href="https://www.youtube.com/watch?v=bjU3vyaO1m4" target="_blank">watch my presentation at CHI '16.</a></p>
             </div>
-            <img src="#" class="modal-image" />
           </div>
         </div>
       </div>           
+      
+      <div>
+        <div class="other-project last-item">
+          <div class="project-name">Coy: A toy for soothing children's separation anxiety (Mandarin)</div>
+          <div class="project-role">Interaction Design, Prototyping, Demo Video - Animation</div>
+        </div>
+        <!-- The Modal -->
+        <div class="modal-mask">
+          <!-- Modal content -->
+          <div class="modal-popup">
+            <div class="modal-header">
+              <span class="close">×</span>
+              <p>Coy: A toy for soothing children's separation anxiety</p>
+            </div>
+            <figure>
+              <img src="coy/main.jpg" class="modal-main-image"/>
+            </figure>
+            <div class="modal-role">
+              Interaction Design, Prototyping, Demo Video - Animation
+            </div>
+            <div class="modal-role">
+              Team: 詹孟穎、何立芹、張奕儁、陳郁辰、陳以婕、葉致宏、林旻葦
+            </div>
+            <div class="modal-role">
+              OpenHCI 2015 主題為「喚體」，為期六天的工作坊，聚焦討論「世間萬物，都將藉由科技產生具有智能的靈魂。」探討如何藉由科技，喚醒物件的靈魂，透過科技的使用與行為，形成新的脈絡，重組人與機器之間的互動。
+            </div>
+            <div class="modal-body">
+              <p>學齡前（4-7歲）的孩童正在學習認知自己與世界的連結，因而容易在進入陌生環境時感到不安、產生「分離焦慮」。Coy 為一款能讓父母親與孩童共同繪製裝扮並互動的小玩伴，期望透過 Coy 的互動模式，讓孩子將這個小玩伴當作與父母間的「信物」。在孩子感到不安時，Coy 能吸引他的注意力、與他遊戲，藉此舒緩孩子和熟悉的親人、環境分離所產生的不安感。
+              </p>
+              <figure>
+                <iframe src="https://www.youtube.com/embed/IBDfe32XNLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </figure>
+              <p>
+                我們從日常生活物件開始探索「要喚醒什麼物件的靈魂」，從各組員事先選擇感興趣的物件討論，從中選擇了「水」而至自來水園區場域觀察。時值平日下午，這裡絕大多數是家長帶小孩或三代同行來玩水。在場域觀察與訪談幾位家長和小朋友後，我們歸納整組覺得有趣、想繼續探討的現象：
+                <ul>
+                  <li>小朋友上岸時腳踩到石頭會喊「好溫暖噢！」</li>
+                  <li>水池內有個中空的水柱，小孩跟大人都喜歡跑到水柱中間不會被沖到頭的地方躲著。</li>
+                  <li>水與岸：陪伴者（家長）跟小朋友的互動；陪伴者認為更衣梳洗麻煩而不下水一起玩。小朋友專心玩水，時不時確認爸媽還在原本位置等待。</li>
+                </ul>
+              </p>
+              <figure>
+                <img src="coy/2_observation_affinity_diagram.jpg" alt="affinity diagram" class="modal-image">
+                <figcaption>場域觀察後把有興趣的現象分成三類：踩到溫溫的石頭、跑到水柱中間躲起來、陪伴者跟小朋友的互動。</figcaption>
+              </figure>
+              <p>我們從觀察結果中發現現象有共通的特性：「冷水」到「溫石頭」的溫度對比，和小朋友在水池中「突然找不到爸媽」到「找到爸媽」的情緒對比，都有「從不愉快瞬間轉化成愉快」的大反差。我們認為「如何製造對比？」「如何將不愉快轉化成愉快？」可能是有趣的問題。經過票選後，我們決定聚焦在「親子分離」的主題。</p>
+              <h3>我們如何能舒緩學齡前小孩離開熟悉環境、父母的分離焦慮？</h3>
+              <h4>親子分離經驗：焦慮行為與尋找陪伴物件</h4>
+              <p>聚焦親子分離主題後，我們著手訪談工作坊中其他參與者幼時與父母分離的經驗，並聯絡學齡前兒童的保姆訪談每日父母托兒後的親子分離經驗。從這其中，我們認為有趣、許多人共通的經驗有：
+              <ul>
+                <li>了解恆存：起初以為爸媽出門就是消失了、離開了，後來才了解他們只是「暫時不在身邊」。</li>
+                <li>安撫陪伴物：小朋友有專屬小毯毯、玩偶，甚至會想像虛擬朋友。</li>
+                <li>萬物有靈：小時候一個人睡覺時害怕有鬼，房間裡的物件好像活著。</li>
+                <li>承諾：父母在離開前，再三保證會回來。</li>
+                <li>讓孩子分心：給他玩具，逗他笑，讓他暫時忘掉分離的難過情緒。</li>
+              </ul></p>
+              <p>從父母的承諾和反覆經驗中學習「恆存」概念、具安撫作用的陪伴物、讓孩子暫時跳脫難過情緒，都能幫助減緩分離焦慮，而兒童時期許多人有相信物件有靈魂的共通經驗，我們因而試著運用這些概念，繼續提出互動設計提案。</p>
+              <h3>互動設計提案</h3>
+              <figure>
+                <img src="coy/3_interaction_design.jpg" alt="illustration" class="modal-image-small">
+                <figcaption>爸媽小孩都有的小吊飾：可看、摸、握、捏，互相表達對彼此的想念，若對方接收到，也可以用小球的震動、溫度、滾動、發光回應。</figcaption>
+                <img src="coy/4_interaction_design.jpg" alt="illustration" class="modal-image">
+                <figcaption>以玩伴形式存在的小毯毯、小娃娃，當小孩焦慮時，可以抓這個物件，而父母回應時可以讓物件有聲音、體積、顏色改變，代表爸媽回應，讓小孩知道爸媽一直都在他身邊陪伴著。</figcaption>
+              </figure>
+              <h3>Coy：Co-toy，是孩子的玩伴，也是孩子與父母間的信物</h3>
+              <p>我們選擇結合玩伴、信物兩者概念，設計出 Coy 的互動原型。小朋友和爸媽各自持有一顆球，在開始使用時，親子可以一起繪製、裝扮這顆球，以共同創作的儀式賦予這顆球生命。小朋友的球是小玩伴，可以對小朋友的碰觸、搖晃、說話、踢、拋等動作回應，透過燈光、球體動態模擬生命體。</p>
+              <p>初期，爸媽可以藉由遠端控制讓 Coy 主動開始找孩子遊玩，並向孩子解釋是爸媽操作，讓孩子學習「恆存」的概念。並透過每天早晨一起將 Coy 從巢中（充電站）喚醒、每天晚間放進巢中的儀式，給予孩子專屬互動信物。在孩子感到不安時，可以碰觸 Coy，小玩伴的回應可以吸引孩子的注意力、陪他玩遊戲。Coy 運用了分離經驗中「幫助學習恆存」、「暫時分心」、「給予信物」、「萬物有靈」，幫助剛開始上幼稚園、送到保母家的學齡前孩童，舒緩離開熟悉環境、家人所產生的分離焦慮。</p>
+              <p>Coy 的實作包含：Sphero 控制球的感測、連線、顏色、動態（搖晃、滾動等）、手縫棉墊與不織布的外層與雷設切割密底板製作的巢。</p>
+              <figure>
+                <img src="coy/5_interaction_feature.jpg" alt="Coy 透過碰觸、搖晃、說話、踢、拋等動作回應，透過燈光、球體動態模擬生命體。" class="modal-image">
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
    
     <section id="contact">
