Update Stamp plate

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="modal-body">
               <p>This project aims to study family mealtime with preschool children and investigate how interactive technology & data play might help with family mealtime for preschoolers and parents.
               </p>
-              <p>I co-work with the remote team in the States. Adopting the design thinking process along with previous restaurant observation and parents interview, we came up with several design ideas. We created prototypes and test them with the children to validate these ideas; also, we spread out the questionnaire with illustrative examples and description of prototypes, to gather the parents' and teachers' feedback on the prototypes.</p>
+              <p>I co-work with the remote team in the States. Adopting the design thinking process along with previous restaurant observation and parents interview, we came up with several design ideas. We sketched the ideas. The team created three prototypes and test them with the children to validate these ideas; also, the U.S. team spread out the questionnaire with illustrative examples and description of prototypes, to gather the parents' and teachers' feedback on the prototypes.</p>
               <figure>
                 <img src="stamp-plate/1_cat_fork.png" alt="Cat fork" class="modal-image">
                 <figcaption>
@@ -222,20 +222,24 @@
               <figure>
                 <img src="stamp-plate/2_stamp_plate.png" alt="Stamp Plate" class="modal-image">
                 <figcaption>
-                  Stamp Plate. As the child eats, the stamp plate keeps track of the food that has been eaten and displays silhouetted figures that resemble that food the child take off on the plate. A goldfish cracker, for example, leaves behind the shape of a small fish. We designed the plate to account for children’s sensory needs while encouraging them to keep food on the plate and reduce mess while eating. 
+                  Stamp Plate. As the child eats, the stamp plate keeps track of the food that has been eaten and displays silhouetted figures that resemble that food the child take off on the plate. A goldfish cracker, for example, leaves behind the shape of a small fish. The plate is designed to account for children’s sensory needs while encouraging them to keep food on the plate and reduce mess while eating. 
                 </figcaption>
               </figure>
               <figure>
                 <img src="stamp-plate/3_illustration.png" alt="Illustration of a talking bear" class="modal-image">
                 <figcaption>An example of prototype from the questionnaire: A talking bear (voice-based virtual agent) that strikes up a conversation when nobody talks through the mealtime.</figcaption>
               </figure>
-              <p>Eventually, we decided to developed the Stamp Plate prototype into a hi-fidelity tech probe for the field study. I worked with another developer to create the hi-fi prototype, using weight sensor, Arduino, and Processing on the Android tablet. We've explored several approaches, e.g., computer vision, electric capacitiy based solutions; we found using weight sensor is the easiest and the most precise way as for now.</p>
-              <p>When the children take off the food on the plate, the stamp plate creates a stamp that resemble the food. It keeps track of the food that has been eaten. After the meal, these stamps become an art materials that children can create drawings with.</p>
+              <p>Eventually, we decided to developed the Stamp Plate prototype into a hi-fidelity tech probe for the field study, to investigate how this mealtime technology would help with family mealtime and what "data play" would affect. I worked with another developer to create the hi-fi prototype, using weight sensor, Arduino, and Processing on the Android tablet. We've explored several approaches, e.g., computer vision, electric capacitiy based solutions; we found using weight sensor is the easiest and the most precise way as for now.</p>
+              <p>When the user take off the food on the plate, the stamp plate creates a stamp that resemble the food. It keeps track of the food that has been eaten. After the meal, these stamps line up by each food and become art materials that users can create drawings with.</p>
+              <figure>
+                <img src="stamp-plate/5_system_workflow.png" alt="stamp plate workflow. eating, all done, play with the stamps" class="modal-image">
+                <figcaption>The system workflow in field studies. First, the users are presented with the food. The stamps would surface as the participants eat. When they said they're "all done", the plate is switched to "data play" mode where stamps would line up by each food and be played with.</figcaption>
+              </figure>
               <figure>
                 <img src="stamp-plate/hi_fi_prototype_1.gif" alt="Take off the food. The stamp appear on the plate." class="modal-image">
                 <figcaption>Building Hi-fidelity prototype. We enabled the recognition of "taking off the food".</figcaption>
               </figure>
-              <p>We conducted the field studies at households in the U.S., before we transcribed the videos into text, conducted qualitative coding and data analysis.</p>
+              <p>The U.S. team conducted the field studies in the households, before we transcribed the videos into text, conducted qualitative coding and data analysis.</p>
               <p>This project is still ongoing. But there's some preliminary result that I could share. For instance, in several studies, the children picky about the food would actively eat the food they didn't like before or eat more food, just because they want to collect different kind of stamps.</p>
               <figure>
                 <img src="stamp-plate/4_remote.png" alt="Skype" class="modal-image">
