Add Podcast to Project

--- a/index.html
+++ b/index.html
@@ -183,8 +183,61 @@
         I've also done these --
       </h2>  
       
-      <div>
+        <div>
         <div class="other-project first-item">
+          <div class="project-name">Podcast APP Redesign</div>
+          <div class="project-role">User Research, UX Design</div>
+        </div>
+        <!-- The Modal -->
+        <div class="modal-mask">
+          <!-- Modal content -->
+          <div class="modal-popup">
+            <div class="modal-header">
+              <span class="close">×</span>
+              <p>Podcast APP Redesign</p>
+            </div>
+            <div class="modal-role">
+              User Research, UX Design
+            </div>
+            <div class="modal-role">
+              Team: Nia Chien, Chloe Hsu, Peiyang Chen
+            </div>
+            <div class="modal-role">
+              Affiliation: The Mentorship Program
+            </div>
+            <div class="modal-body">
+                <p>
+                    <a href="http://thementorship.tw/" target="_blank">The MentorShip Program</a> aims to provide a chance for those who are ambitious but feeling lost to find their directions in pursuing a career. The program aims to gather female in tech for encouraging more outstanding women in tech industry to lead and be guided to a greater development.
+                </p>
+                <p>
+                    I participate in the UX group as a mentee, so as to broaden my UX expertise and get to know more UX enthusiast that we can learn things together. Our team chose the podcast product as our research and redesign project. This project is ongoing; The following is the current outcome. 
+                </p>
+                <img src="the-mentorship/1.jpg" class="modal-image">
+                <img src="the-mentorship/2.jpg" class="modal-image">
+                <img src="the-mentorship/3.jpg" class="modal-image">
+                <img src="the-mentorship/4.jpg" class="modal-image">
+                <img src="the-mentorship/5.jpg" class="modal-image">
+                <img src="the-mentorship/6.jpg" class="modal-image">
+                <img src="the-mentorship/7.jpg" class="modal-image">
+                <img src="the-mentorship/8.jpg" class="modal-image">
+                <img src="the-mentorship/9.jpg" class="modal-image">
+                <img src="the-mentorship/10.jpg" class="modal-image">
+                <img src="the-mentorship/11.jpg" class="modal-image">
+                <img src="the-mentorship/12.jpg" class="modal-image">
+                <img src="the-mentorship/13.jpg" class="modal-image">
+                <img src="the-mentorship/14.jpg" class="modal-image">
+                <img src="the-mentorship/15.jpg" class="modal-image">
+                <img src="the-mentorship/16.jpg" class="modal-image">
+                <img src="the-mentorship/17.jpg" class="modal-image">
+                <img src="the-mentorship/18.jpg" class="modal-image">
+                <img src="the-mentorship/19.jpg" class="modal-image">
+            </div>
+          </div>
+        </div>
+      </div>
+        
+      <div>
+        <div class="other-project">
           <div class="project-name">Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</div>
           <div class="project-role">Prototyping, Qualitative Data Analysis</div>
 <!--          <img src="#" alt="Stamp Plate" class="project-image"/>-->
