Edit the text in Podcast Project

--- a/index.html
+++ b/index.html
@@ -231,6 +231,9 @@
                 <img src="the-mentorship/17.jpg" class="modal-image">
                 <img src="the-mentorship/18.jpg" class="modal-image">
                 <img src="the-mentorship/19.jpg" class="modal-image">
+                <p>
+                    This project is still ongoing & More details are coming up!.
+                </p>
             </div>
           </div>
         </div>
