--- a/index.html
+++ b/index.html
@@ -607,6 +607,11 @@
       <ul class="about-column">
         <h4>Activities and Volunteering</h4>
         <li class="experience">
+            <div class="role">Mentee</div>
+            <div class="affiliation"><a href="http://thementorship.tw">The Mentorship Program (曼陀號領航計畫)</a></div>
+            <div class="duration">May 2019 - Present</div>
+        </li>
+        <li class="experience">
           <div class="role">Writer Volunteer</div>
           <div class="affiliation"><a href="https://www.facebook.com/wanhuaxiaoxiao/" target="_blank">Wiki for Hometown (為家鄉寫維基)</a></div>
           <div class="duration">Mar 2019 - Present</div>
