Update job experience

--- a/index.html
+++ b/index.html
@@ -520,12 +520,12 @@
              <li>
               <div class="affiliation">User Empowerment Lab, University of Washington</div>
               <div class="location">Seattle, WA, United States</div>
-              <div class="duration">May 2018 - Present</div>
+              <div class="duration">May 2018 - Jun 2019</div>
              </li>
              <li>
               <div class="affiliation">Mobile and Ubiquitous Interaction Lab, National Chiao Tung University</div>
               <div class="location">Hsinchu, Taiwan</div>
-              <div class="duration">May 2018 - Present</div>
+              <div class="duration">May 2018 - Feb 2019 & Jul - Aug 2019 </div>
             </li>
             <li>
               <div class="affiliation">Innovative User Interface Lab, National Chengchi University</div>
