--- a/pinchfun/index.html
+++ b/pinchfun/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Designing a child-parent cooperative game for fine motor skills training - ChiaYu Chen" />
     <meta property="og:url" content="chiayu.me" />
     <meta property="og:image" content="#" />
-    <meta property="og:site_name" content="ChiaYu Chen - HCI Researcher" />
+    <meta property="og:site_name" content="ChiaYu Chen - HCI Researcher and Interaction Designer" />
     <meta property="og:description" content="a cooperative game to support fine motor training for preschool children ages 4 to 6 - ChiaYu Chen Portfolio" />
     <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../css/project.css" />
