--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="ChiaYu Chen - HCI Researcher and Interaction Designer" />
     <meta property="og:url" content="chiayu.me" />
     <meta property="og:image" content="#" />
-    <meta property="og:site_name" content="ChiaYu Chen - HCI Researcher" />
+    <meta property="og:site_name" content="ChiaYu Chen - HCI Researcher and Interaction Designer" />
     <meta property="og:description" content="HCI Researcher and interaction designer based in Taiwan" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
