--- a/music/index.html
+++ b/music/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Design for better music listening experience on mobile - ChiaYu Chen" />
     <meta property="og:url" content="chiayu.me" />
     <meta property="og:image" content="#" />
-    <meta property="og:site_name" content="ChiaYu Chen - HCI Researcher" />
+    <meta property="og:site_name" content="ChiaYu Chen - HCI Researcher and Interaction Designer" />
     <meta property="og:description" content="applying UCD concept to revamp the UX of a mobile music product - ChiaYu Chen Portfolio" />
     <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../css/project.css" />
