--- a/music/index.html
+++ b/music/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../css/project.css" />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="../img/icon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600" />
   </head>
 
