Fixed the title of Sleep Analytics Case Study

--- a/cubo/index.html
+++ b/cubo/index.html
@@ -17,13 +17,13 @@
     gtag('config', 'UA-140784664-1');
   </script>
 
-    <title>Design a night of peace of mind for parents and their tiny human - ChiaYu Chen</title>
+    <title>Design to bring peace of mind for parents with newborns - ChiaYu Chen</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta name="description" content="ChiaYu Chen is a Product Designer based in Taiwan, with passion in constructing meaningful interaction between human and technologies, in digital and physical world." />
     <meta name="keywords" content="Product designer, UX designer, user researcher, UX researcher, prototyper, interaction designer, HCI researcher, human-computer interaction" />
     <meta name="author" content="ChiaYu Chen" />
-    <meta property="og:title" content="Design a night of peace of mind for parents and their tiny human - ChiaYu Chen" />
+    <meta property="og:title" content="Design to bring peace of mind for parents with newborns - ChiaYu Chen" />
     <meta property="og:url" content="icily.github.io" />
     <meta property="og:image" content="#" />
     <meta property="og:site_name" content="ChiaYu Chen - HCI Researcher and Interaction Designer" />
@@ -47,7 +47,7 @@
 
     <header>
       <h1>
-        Design a night of peace of mind for parents and their tiny human
+        Design to bring peace of mind for parents with newborns
       </h1>
       <div class="progress-bar"></div>
       <p>
