--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </h2>
       
       <a href="cubo" class="project cubo first-item">
-        <div class="project-name">Design a night of peace of mind for parents and their tiny human</div>
+        <div class="project-name">Design to bring peace of mind for parents with newborns</div>
         <div class="project-role">Product Design (UI+UX), User Research
         </div>
         <div class="project-cta">View Case Study</div>
