Fixed grammar error

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         Hello! I'm ChiaYu, a happy hybrid who loves to build products that people love.
       </h1>
       <p>
-        I do design, research and code. My passion lies in understanding human, making technologies, and constructing a delightful human-tech relationship.
+        I do design, research, and code. My passion lies in understanding humans, making technologies, and constructing a meaningful human-tech relationship.
       <p/>
       <p>
-        I'm a product designer with 2.5 years of experience, ex-<a href="https://us.getcubo.com" target="_blank">Cubo Ai</a>. My startup experience has enabled me to ideate and test my design concepts with real users rapidly yet with flexibility.
+        I'm a product designer with 2.5 years of experience, ex-<a href="https://us.getcubo.com" target="_blank">Cubo Ai</a>. My startup experience has enabled me to rapidly and flexibly ideate and tests design concepts with real users.
       </p>
       <p>
         <a href="#portfolio">Explore my portfolio</a> or <a href="chiayuchen_resume.pdf" target="_blank">View my résumé</a> to get an overall sense. <br/>
