Update design outcome paragraph

--- a/cubo/index.html
+++ b/cubo/index.html
@@ -67,8 +67,9 @@
 
       <h3>Outcome & Impact</h3>
       <ul>
-          <li class="research-question">> 6,600 user interested in paid subscription (# after the 1st month launch)</li>
+          <li> 6,600 user interested in paid subscription (# after the 1st month launch)</li>
           <li class="research-question">> 5% paid users after 1 year free trial</li>
+          <li class="research-question">Amazon 4.6-star rating </li>
           <li>Caregivers said they're more reassured <a href="https://us.getcubo.com/pages/sleep-analytics" target="_blank">(see testimonials)</a></li>
       </ul>
         
@@ -89,14 +90,14 @@
         Design Outcome
       </h2>
       <p>
-       Transform a vast amount of sleep data to the no-brainer - easily digestible information. 
-      </p>
-      <p><span class="research-question">A dashboard that parents can take a glance and assess their baby's sleep status with real numbers.</span> From the user interviews and questionnaires, parents consider total hours of sleep the most important, even the only, indicator of their baby's sleep quality. Users can easily tell if it's a good night or bad night with the enlarged section.</p>
-      <p>The rest of numbers (Longest sleep, time to fall asleep) are useful for parents who do sleep training.</p>
+       I transform a vast amount of sleep data to the no-brainer - easily digestible information, 
+      <span class="research-question">a dashboard that parents can take a glance at and assess their baby's sleep status with real numbers.</span></p>
+      <p>From user interviews and questionnaires, parents consider total hours of sleep an essential indicator of their baby's sleep quality. Users can quickly tell if it's a good or bad night with the enlarged section. Other numbers, Longest sleep, Time to fall asleep, are helpful for parents who adopt sleep training methods.</p>
+      <p>Caregivers consider longer sleep stretch as an important indicator. In our design, they can tell from the visualization of Zz to tell if the sleep was consistent. Also, cry 😭 and movement 👋 were considered #1 and #2 priorities representing interrupted sleep.</p>
       <figure>
         <img src="1_sleep_analytics.gif" alt="sleep analytics dashboard" class="imgif">
       </figure>
-      <p><span class="research-question">I extended the caregiver's habit of checking the stored video from the last 18 hours and added a "event tag" design.</span> A caregiver always wants to review & improve, so when they scroll through last night's video timeline, the highlights become easy-to-access and they can easily understand the consequences of each sleep event.</p>
+      <p>From the user interviews and former feature requests gathered by Customer Support Team, one of the most frequent request is fast-forward and video scrubbing because caregivers want to make sure it was a good night and if not, they would check what went wrong during the night so they can iterate their nursery arrangement and sleeping schedule. <span class="research-question">I therefore extended this caregiver's habit of checking the stored video from the last 18 hours and added a "event tag" design.</span> A caregiver always wants to review & improve, so when they scroll through last night's video timeline, the highlights become easy-to-access and they can easily understand the consequences of each sleep event.</p>
       <figure>
         <img src="2_18hr_playback.gif" alt="18-Hour playback" class="imgif-horizontal">
       </figure>
