Update experience, introduction, site structure, project order

--- a/cubo/index.html
+++ b/cubo/index.html
@@ -40,8 +40,8 @@
       <a id="home" href="../#portfolio">
         <div id="home-title">← Home</div>
       </a>
-      <a id="next" href="../pinchfun">
-        <div id="home-title">Next: PinchFun →</div>
+      <a id="next" href="../music">
+        <div id="home-title">Next: Music APP →</div>
       </a>
     </nav>
 
