--- a/music/index.html
+++ b/music/index.html
@@ -37,11 +37,11 @@
 
   <body>
     <nav>
-      <a id="home" href="../pinchfun">
-        <div id="home-title">← Last: PinchFun</div>
+      <a id="home" href="../cubo/">
+        <div id="home-title">← Last: Cubo</div>
       </a>
-      <a id="next" href="../#portfolio">
-        <div id="home-title">Other Projects →</div>
+      <a id="next" href="../pinchfun/">
+        <div id="home-title">Next: PinchFun →</div>
       </a>
     </nav>
 
