--- a/pinchfun/index.html
+++ b/pinchfun/index.html
@@ -38,10 +38,10 @@
   <body>
     <nav>
       <a id="home" href="../cubo">
-        <div id="home-title">Last: Sleep Analytics</div>
+        <div id="home-title">← Last: Music APP</div>
       </a>
-      <a id="next" href="../music">
-        <div id="home-title">Next: Music APP →</div>
+      <a id="next" href="../../#portfolio">
+        <div id="home-title">More Projects →</div>
       </a>
     </nav>
 
