fix layout bug in about page

--- a/about.html
+++ b/about.html
@@ -138,14 +138,9 @@
     </nav>
     
     <section id="about-me">
-      <h2>
-        More about ChiaYu
-      </h2>
       <p>
-        👋 I'm ChiaYu (佳妤 in Mandarin and it sounds like <em>Jah-Yu</em>). 
-      </p>
-      <p>
-         I enjoy being hybrid doing product design, user research, code, and think in business. I love working collaboratively with interdisciplinary teams and bridging human-centered design with business strategy and technologies.
+        <b>I enjoy being hybrid doing product design, user research, code, and think in business.</b>
+          I love working collaboratively with interdisciplinary teams and bridging human-centered design with business strategy and technologies.
       </p>
       <p>
         I decided to take the career on product design because it's multifaceted. It allows me to tackle from art, business, tech and most importantly, creating things that empowers people. I’ve worked as product designer, engineer, user researcher and academia-focused HCI researcher, from which I’ve got a holistic view about connecting with understanding human and creating technologies.
