fix layout bug in about page

--- a/about.html
+++ b/about.html
@@ -138,6 +138,7 @@
     </nav>
     
     <section id="about-me">
+      <h3>More about me</h3>
       <p>
         <b>I enjoy being hybrid doing product design, user research, code, and think in business.</b>
           I love working collaboratively with interdisciplinary teams and bridging human-centered design with business strategy and technologies.
