fix menu bug on about page

--- a/about.html
+++ b/about.html
@@ -123,10 +123,10 @@
       </label>
       <ul id="menu">
         <li>
-          <a href="#portfolio" onclick="document.getElementById('menu-btn').checked=false;">Portfolio</a>
+          <a href="../#portfolio" onclick="document.getElementById('menu-btn').checked=false;">Portfolio</a>
         </li>
         <li>
-          <a href="#contact" onclick="document.getElementById('menu-btn').checked=false;">Contact</a>
+          <a href="../#contact" onclick="document.getElementById('menu-btn').checked=false;">Contact</a>
         </li>
         <li>
           <a href="about.html"  onclick="document.getElementById('menu-btn').checked=false;">About</a>
